# ChangeLog for virtual/perl-libnet
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-libnet/ChangeLog,v 1.48 2014/02/15 08:56:55 zlogene Exp $

  15 Feb 2014;  <zlogene@gentoo.org> -files/maintainer_notes.txt,
  perl-libnet-1.220.0-r1.ebuild, perl-libnet-1.230.0.ebuild:
  Drop unused files from filesdir (wrt bug #501188). Thanks to Ulrich Müller.

  20 Jan 2014; Mike Frysinger <vapier@gentoo.org> perl-libnet-1.220.0-r1.ebuild,
  perl-libnet-1.230.0.ebuild:
  Add arm64 love.

  31 Dec 2013; Mikle Kolyada <zlogene@gentoo.org> perl-libnet-1.220.0-r1.ebuild,
  perl-libnet-1.230.0.ebuild:
  Drop perl-5.10* dependency

  05 Sep 2013; Patrick Lauer <patrick@gentoo.org>
  -perl-libnet-1.220.0-r2.ebuild, perl-libnet-1.230.0.ebuild:
  Restore keywords

*perl-libnet-1.230.0 (24 Aug 2013)

  24 Aug 2013; Patrick Lauer <patrick@gentoo.org> +perl-libnet-1.230.0.ebuild:
  Bump

  14 Aug 2013; Patrick Lauer <patrick@gentoo.org> +files/maintainer_notes.txt:
  Adding maintainer notes from perl-exp overlay

*perl-libnet-1.220.0-r2 (14 Aug 2013)

  14 Aug 2013; Patrick Lauer <patrick@gentoo.org>
  +perl-libnet-1.220.0-r2.ebuild:
  Import from perl-experimental overlay

  18 Feb 2013; Zac Medico <zmedico@gentoo.org> perl-libnet-1.220.0-r1.ebuild:
  Add ~arm-linux keyword.

  15 Jun 2012; Torsten Veller <tove@gentoo.org> perl-libnet-1.220.0-r1.ebuild:
  Add perl-5.16 as provider

  05 May 2012; Alexis Ballier <aballier@gentoo.org>
  perl-libnet-1.220.0-r1.ebuild:
  keyword ~amd64-fbsd

  30 Jul 2011; Torsten Veller <tove@gentoo.org> perl-libnet-1.220.0-r1.ebuild:
  Drop ~sparc-fbsd KEYWORD

  28 Jun 2011; Torsten Veller <tove@gentoo.org> perl-libnet-1.220.0-r1.ebuild:
  Add perl-5.12.4 virtual

*perl-libnet-1.220.0-r1 (18 Jun 2011)

  18 Jun 2011; Torsten Veller <tove@gentoo.org> -perl-libnet-1.220.0.ebuild,
  +perl-libnet-1.220.0-r1.ebuild:
  Add perl-5.14 as provider

*perl-libnet-1.220.0 (22 May 2011)
