@@ -1,0 +1,21 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-libnet/perl-libnet-1.270.0.ebuild,v 1.1 2014/07/15 21:20:09 dilfridge Exp $
+
+# Some important notes about detecting libnet version 
+# http://dev.gentoo.org/~zlogene/perl-libnet-mantainer-notes   
+
+# perl-5.20 probably was 1.260 (which is not on cpan anymore)
+
+EAPI=5
+
+DESCRIPTION="Virtual for ${PN#perl-}"
+HOMEPAGE=""
+SRC_URI=""
+
+LICENSE=""
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~arm-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+RDEPEND="~perl-core/${PN#perl-}-${PV}"
